--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
     "require": {
         "php": "^8.2",
         "barryvdh/laravel-dompdf": "^3.1",
+        "darryldecode/cart": "^4.2",
         "filament/filament": "^3.2",
         "intasend/intasend-php": "^1.1",
         "laravel/framework": "^12.0",
